--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 						<div class="form-group">
 							<label class="control-label" for="signupPassword">Password</label>
 							<input id="signupPassword" type="password" maxlength="25" class="form-control" placeholder="At least 6 characters" length="40">
+							<p>Passwords must be at least 6 characters</p>
 						</div>
                         <p class="form-group">To verify your number, we will send you a text meaasge with a temporary code. Message and data rates may apply.</p>
 						<div class="form-group">
